# mesa

./: .gitlab-ci.yml  .travis.yml  Android.common.mk  Makefile.am  Rockerfile  VERSION  appveyor.yml  configure.ac  find_fallthrough.py  meson.build  meson_options.txt
docs/: GL3.txt  bugs.html  envvars.html  features.txt  helpwanted.html  release-calendar.html  releasing.html
docs/relnotes/: 17.1.0.html  19.1.0.html  19.2.0.html
gitlab-ci/: Rockerfile.base  Rockerfile.llvm  Rockerfile.mesa  inspect-remote-image.sh
include/: c99_compat.h
include/pci_ids/: i965_pci_ids.h
m4/: ax_check_python_mako_module.m4
mesa-build/src/: git_sha1.h
scons/: gallium.py  llvm.py
src/: meson.build
src/amd/: meson.build
src/amd/compiler/: README  TODO  aco_IR.cpp  aco_assembler.cpp  aco_builder.cpp  aco_builder.h  aco_builder_cpp.py  aco_builder_h.py  aco_builder_instr_defs.py  aco_cfg.h  aco_dead_code_analysis.cpp  aco_dominance.cpp  aco_eliminate_pseudo_instr.cpp  aco_insert_NOPs.cpp  aco_insert_exec_mask.cpp  aco_insert_waitcnt.cpp  aco_instruction_combination_bw.cpp  aco_instruction_combination_fw.cpp  aco_instruction_selection.cpp  aco_instruction_selection_setup.cpp  aco_interface.cpp  aco_interface.h  aco_ir.h  aco_live_var_analysis.cpp  aco_lower_bool_phis.cpp  aco_lower_to_cssa.cpp  aco_lower_to_hw_instr.cpp  aco_opcodes.py  aco_opcodes_c.py  aco_opcodes_cpp.py  aco_opcodes_h.py  aco_opt_lvn.cpp  aco_opt_value_numbering.cpp  aco_optimizer.cpp  aco_print_asm.cpp  aco_print_ir.cpp  aco_reduce_assign.cpp  aco_register_allocation.cpp  aco_scheduler.cpp  aco_scheduler_postRA.cpp  (+6 more)
src/compiler/: Makefile.sources  builtin_type_macros.h  glsl_types.cpp  glsl_types.h  linker_util.cpp  linker_util.h  meson.build  nir_types.cpp  nir_types.h  shader_enums.c  shader_enums.h  shader_info.h
src/egl/: meson.build
src/gbm/: gbm-symbols-check
src/glsl/: Makefile.sources  ast.h  ast_array_index.cpp  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  builtin_functions.cpp  builtin_types.cpp  builtin_variables.cpp  glsl_lexer.ll  glsl_parser.yy  glsl_parser_extras.cpp  glsl_parser_extras.h  glsl_symbol_table.cpp  glsl_types.cpp  glsl_types.h  hir_field_selection.cpp  ir.cpp  ir.h  ir_function.cpp  ir_hierarchical_visitor.cpp  ir_hierarchical_visitor.h  ir_hv_accept.cpp  ir_optimization.h  ir_print_visitor.cpp  ir_print_visitor.h  ir_reader.cpp  ir_rvalue_visitor.cpp  ir_rvalue_visitor.h  ir_uniform.h  ir_validate.cpp  ir_visitor.h  link_interface_blocks.cpp  link_uniform_block_active_visitor.cpp  link_uniform_block_active_visitor.h  link_uniform_blocks.cpp  link_uniform_initializers.cpp  link_uniforms.cpp  (+17 more)
(+650 files in other folders)
